--- a/wiki/pages/education.html
+++ b/wiki/pages/education.html
@@ -108,10 +108,43 @@ We aspire to foster mutual learning and dialogue, laying the foundation for acti
 <p class="mt-5 sub-stuff"> <b>Communicating Science to High School Students</b><br>
 High School students in India are taught biology well in compliance with the educational curriculum. However, the definition of biology in India has become restricted to becoming a practicing medical doctor due to societal pressure, and thus, very rarely do students begin to explore the non-anatomy side of biology. Textbooks in India discuss genetic engineering and not Synthetic biology, making this a new concept for most students. New concepts and their potential applications in their daily life tend to ignite any student’s interest, which is why we chose to discuss synthetic biology with them. To help them explore how a new field can assist their daily life, given that suitable precautions are taken.<br>
 Our primary aim with high school students was to teach them the basics of synthetic biology. We taught them concepts like the central dogma of life, applications of synthetic biology and genetic engineering principles.<br>
-We were able to successfully conduct these sessions with the help of a few animations for easy understanding—
-We also conducted a Codon Chart Activity for students to understand the concept of translation better. We linked various amino acids to single alphabets and provided them with a code which spelt out an iconic phrase— “I AM BOND.” 
+We were able to successfully conduct these sessions with the help of a few animations for easy understanding—<br>
+We also conducted a Codon Chart Activity for students to understand the concept of translation better. We linked various amino acids to single alphabets and provided them with a code which spelt out an iconic phrase— “I AM BOND.” <br>
 Our team members were able to visit several high schools across the states of Karnataka, Tamil Nadu and Maharashtra.<br>
 </p>
+
+<!-- Carousel -->
+
+<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img class="d-block w-100" src="..." alt="First slide">
+      <div class="carousel-caption d-none d-md-block">
+        <p>Hi</p>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="..." alt="Second slide">
+      <div class="carousel-caption d-none d-md-block">
+        <p>Hello</p>
+  </div>
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="..." alt="Third slide">
+      <div class="carousel-caption d-none d-md-block">
+        <p>How are you</p>
+      </div>
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
 
                   </div>
 
