--- a/wiki/my-layout.html
+++ b/wiki/my-layout.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
       <body style="background: #FFFFFF;">
         <!-- Navbar -->
-          <nav class="navbar navbar-expand-lg navbar-light fixed-top" style="background-color: #4BD9E8;">
+          <nav class="navbar navbar-expand-lg navbar-light fixed-top" style="background-color: #FFFFFF font-color: #000000;">
               <a class="navbar-brand" href="#">MIT-MAHE</a>
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
