--- a/wiki/my-layout.html
+++ b/wiki/my-layout.html
@@ -6,7 +6,7 @@
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
     <link rel="stylesheet" href="{{ url_for('static', filename='common-waves.css') }}">
-    <link href="{{ url_for('static', filename='bootstrap5.bundle.min.js') }}"
+    <script src="{{ url_for('static', filename='bootstrap5.bundle.min.js') }}"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
       <body style="background: #FFFFFF;">
         <!-- Navbar -->
