--- a/wiki/pages/education.html
+++ b/wiki/pages/education.html
@@ -89,7 +89,8 @@ At MIT-MAHE, we have embarked on a mission to bridge this knowledge gap by creat
 The success of our project depends heavily on our educational outreach. We aim to fight the stigma and false information surrounding GMOs  by developing a concrete understanding of the biology of wastewater management and the usage of  antimicrobials like triclocarban in everyday life. Due to this knowledge, the public and other stakeholders are better equipped to generate educated judgments, which ultimately helps projects improve and ensures safety by encouraging constructive criticism.<br>
 <br>
 We aspire to foster mutual learning and dialogue, laying the foundation for active participation in shaping the future of synthetic biology through our workshops, age-appropriate presentations, social media, comic strips, activity booklet, blog, online talks and handbook. Education is our mission's bedrock, unlocking synthetic biology's transformative potential to address critical societal and environmental challenges.</p>
-<p class="mt-5 sub-stuff"> <b>Communicating Science to High School Students</b><br>
+<p class="mt-5 MAIN-STUFF" id="section2">Communicating Science to High School Students<br> </p>
+<p class="mt-5 sub-stuff"> 
 High School students in India are taught biology well in compliance with the educational curriculum. However, the definition of biology in India has become restricted to becoming a practicing medical doctor due to societal pressure, and thus, very rarely do students begin to explore the non-anatomy side of biology. Textbooks in India discuss genetic engineering and not Synthetic biology, making this a new concept for most students. New concepts and their potential applications in their daily life tend to ignite any student’s interest, which is why we chose to discuss synthetic biology with them. To help them explore how a new field can assist their daily life, given that suitable precautions are taken.<br>
 Our primary aim with high school students was to teach them the basics of synthetic biology. We taught them concepts like the central dogma of life, applications of synthetic biology and genetic engineering principles.<br>
 We were able to successfully conduct these sessions with the help of a few animations for easy understanding—<br>
@@ -107,13 +108,13 @@ Our team members were able to visit several high schools across the states of Ka
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img class="d-block w-100" src="https://static.igem.wiki/teams/4641/wiki/education/whatsapp-image-2023-10-09-at-06-19-15.jpeg" alt="First slide">
+      <img class="d-block w-100" style="scale:0.5;" src="https://static.igem.wiki/teams/4641/wiki/education/whatsapp-image-2023-10-09-at-06-19-15.jpeg" alt="First slide">
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="https://static.igem.wiki/teams/4641/wiki/education/whatsapp-image-2023-10-09-at-06-17-20.jpeg" alt="Second slide">
+      <img class="d-block w-100" style="scale:0.5;" src="https://static.igem.wiki/teams/4641/wiki/education/whatsapp-image-2023-10-09-at-06-17-20.jpeg" alt="Second slide">
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="https://static.igem.wiki/teams/4641/wiki/education/whatsapp-image-2023-10-09-at-00-25-58.jpeg" alt="Third slide">
+      <img class="d-block w-100" style="scale:0.5;" src="https://static.igem.wiki/teams/4641/wiki/education/whatsapp-image-2023-10-09-at-00-25-58.jpeg" alt="Third slide">
     </div>
   </div>
   <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -130,7 +131,7 @@ Our team members were able to visit several high schools across the states of Ka
 <div class="accordion" id="accordionExample">
   <div class="accordion-item">
     <h2 class="accordion-header" id="headingOne">
-      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
         <b>Government High School, Kopinayakkanpatti, Madurai, Tamil Nadu—</b>3rd July 2023 
       </button>
     </h2>
@@ -259,14 +260,14 @@ In conclusion, our educational visit to Board High School, followed by the visit
 </div>
 
 
-  <p class="mt-5 MAIN-STUFF" id='section2'>Reaching out to Middle School Students</p>
+  <p class="mt-5 MAIN-STUFF" id='section3'>Reaching out to Middle School Students</p>
   <p class="mt-5 sub-stuff">Teaching middle school students about environmental concepts was crucial as it promotes mutual learning. We tailored our content to align with the general school curriculum, focusing on chemicals, pollutants, and sustainability rather than biology. This approach encourages responsible, sustainable attitudes from an early age. <br>
 Our documentation can aid future educational initiatives and highlight broader environmental issues. Moreover, it encourages early engagement in environmental issues and lays a foundation for understanding its relevance to real-world challenges.</p>
 
   <div class="accordion" id="accordionExample">
   <div class="accordion-item">
     <h2 class="accordion-header" id="headingNine">
-      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseNine" aria-expanded="false" aria-controls="collapseNine">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseNine" aria-expanded="false" aria-controls="collapseNine">
         <b>Prakriya International School </b> (5 July, 2023)
       </button>
     </h2>
@@ -293,13 +294,13 @@ We translated our middle school educational content on "Chemicals in Daily Use P
   </div>
 
 
-  <p class='mt-5 MAIN-STUFF' id='section3'> Sparking young minds</p>
+  <p class='mt-5 MAIN-STUFF' id='section4'> Sparking young minds</p>
   <p class='mt-5 sub-stuff'> Teaching primary school students about environmental concepts is essential as it promotes early curiosity. We engaged them by using an activity booklet and a comic strip. While we did not teach specific content, our creative approach sparks interest and encourages early engagement in science, fostering an understanding of its relevance to real-world challenges.</p>
 
   <div class="accordion" id="accordionExample">
   <div class="accordion-item">
     <h2 class="accordion-header" id="headingEleven">
-      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseEleven" aria-expanded="false" aria-controls="collapseEleven">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseEleven" aria-expanded="false" aria-controls="collapseEleven">
         <b>Sri Krishna Mandir, Hulimavu, Bangalore—</b>8th July 2023
       </button>
     </h2>
@@ -349,12 +350,12 @@ We translated our middle school educational content on "Chemicals in Daily Use P
   </div>
   </div>
 
-  <p class='mt-5 MAIN-STUFF' id='section4'> Presentation to our scientific peers</p>
+  <p class='mt-5 MAIN-STUFF' id='section5'> Presentation to our scientific peers</p>
 
   <div class="accordion" id="accordionExample">
   <div class="accordion-item">
     <h2 class="accordion-header" id="headingFifteen">
-      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFifteen" aria-expanded="false" aria-controls="collapseFifteen">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFifteen" aria-expanded="false" aria-controls="collapseFifteen">
         <b>Lab Safety and Security Session</b> 
       </button>
     </h2>
@@ -447,17 +448,17 @@ Overall, the tasks were designed in a way that idea creativity was encouraged, y
   </div>
   </div>
 
-  <p class='mt-5 MAIN-STUFF' id='section5'> Educating and gaining opinions from working professionals </p>
+  <p class='mt-5 MAIN-STUFF' id='section6'> Educating and gaining opinions from working professionals </p>
 
 
   <div class="accordion" id="accordionExample">
   <div class="accordion-item">
-    <h2 class="accordion-header" id="headingNine">
-      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseNine" aria-expanded="false" aria-controls="collapseNine">
+    <h2 class="accordion-header" id="headingEighteen">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseEighteen" aria-expanded="false" aria-controls="collapseEighteen">
         <b>The Rotary Club of Coimbatore Metropolis, Coimbatore</b>
       </button>
     </h2>
-    <div id="collapseNine" class="accordion-collapse collapse show" aria-labelledby="headingNine">
+    <div id="collapseEighteen" class="accordion-collapse collapse show" aria-labelledby="headingEighteen">
       <div class="accordion-body">
         <p>Our Team Leader, Aditi Balasubramani, visited a meeting hosted by the Rotary Club of Coimbatore Metropolis. There, she gave a gist of the project and a basic overview of synthetic biology in a way that was easy to understand for everyone present there. There were around 20 members in the audience; they were Rotary members who were business people, mainly aged 40-60. They were very interested in the synthetic biology aspect of bioremediation. However, there were mixed opinions on the idea of genetically modified organisms and concerns about the accidental release of our modified organisms. They were satisfied with the explanation of a kill switch and biocontainment strategies. Some felt that GMOs were the future, while others were staunchly against it but were willing to listen and understand more. This visit exposed the public’s opinions towards GMOs and bioremediation.</p>
       </div>
@@ -477,12 +478,12 @@ Overall, the tasks were designed in a way that idea creativity was encouraged, y
   </div>
   </div>
 
-  <p class='mt-5 MAIN-STUFF' id='section6'> Spreading public awareness about synthetic biology  </p>
+  <p class='mt-5 MAIN-STUFF' id='section7'> Spreading public awareness about synthetic biology  </p>
 
   <div class="accordion" id="accordionExample">
   <div class="accordion-item">
     <h2 class="accordion-header" id="headingTwentyone">
-      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwentyone" aria-expanded="false" aria-controls="collapseTwentyone">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwentyone" aria-expanded="false" aria-controls="collapseTwentyone">
         <b>Bioremediation Conclave</b>
       </button>
     </h2>
@@ -621,12 +622,12 @@ To make it sound more creative and professional, we collaborated with Paras Ahuj
 </div>
 
 
-  <p class='mt-5 MAIN-STUFF' id='section7'> Synthetic Biology for Everyone </p>
+  <p class='mt-5 MAIN-STUFF' id='section8'> Synthetic Biology for Everyone </p>
 
   <p class='mt-5 sub-stuff'> On many occasions, the differently-abled are excluded from science and technology. Science is for everyone. To bring fruition to our beliefs, we visited a rehabilitation center and interacted with the members at their homes.<br><br>
 On 7 October 2023, our team visited the Asare Rehabilitation Centre—a home for the differently-abled. The senior special educator welcomed us to the institution and began by discussing how Asare houses people traditionally excluded from other homes. We then proceeded to provide crayons and coloring sheets to all the residents; they were coloring soap bottles. We used the subject of the coloring sheets as a starter for our skit, which we conducted in the local language, Kannada, and introduced our year-long project, CarbanEL. We used color changes in a beaker to signify how our project would work and, therefore, attempted to demonstrate our project more interactively. We ended the session with some songs and answered the doubts raised by the residents about our project and other scientific terms. Through this visit, we understood that there are no barriers to understanding science, and their enthusiasm toward our initiative was enlivening.</p>
 
-  <p class='mt-5 MAIN-STUFF' id='section8'> Our Takeaway</p>
+  <p class='mt-5 MAIN-STUFF' id='section9'> Our Takeaway</p>
   <p class='mt-5 sub-stuff'> For future teams to build upon and our biggest take away from our educational visits, this is our “Guide to Education” for various age groups. <br><br>
 This is one of the major challenges faced by our team during our education sessions. The differences in age groups, regions and languages was something that one needs to keep in mind while planning a session.<br><br> 
 From our educational visits across various states of India, we have realized a few things that need to be pondered over before an educational visit. We have attempted to compile thought-provoking and follow-up questions on how to effectively convey our ideas to the different sections of the community  and educate them about synthetic biology and more. </p>
