--- a/wiki/pages/education.html
+++ b/wiki/pages/education.html
@@ -637,6 +637,24 @@ Overall, the tasks were designed in a way that idea creativity was encouraged, y
     <div id="collapseNineteen" class="accordion-collapse collapse" aria-labelledby="headingNineteen">
       <div class="accordion-body">
         <p>30 collegiate students attended the webinar held by iGEM MIT_MAHE on 4th October 2023. We held this webinar as integrating computation with pure biological fields is relatively new. Therefore, college students may need to be made aware of the potential of this emerging interdisciplinary topic. The speaker, Olivia Gallup, is a DPhil student at the University of Oxford studying Synthetic Biology. She covered topics ranging from Biochemical reaction networks to genetic circuits. Post the webinar, there was a question session where doubts were cleared.</p>
+
+      <div class="container">
+                      <div class="row">
+                        <div class="col-md-6">
+                          <figure>
+                          <img src="https://static.igem.wiki/teams/4641/wiki/education/screenshot-from-the-webinar-with-olivia-gallup-on-computational-methods-in-synthetic-biology.png" class="img-fluid mt-4">
+                          <figcaption style="text-align:center;"> screenshot from the webinar with Olivia Gallup on Computational Methods in Synthetic Biology </figcaption>
+                          </figure
+                        </div>
+                        <div class="col-md-6">
+                          <figure>
+                          <img src="https://static.igem.wiki/teams/4641/wiki/education/poster-for-publicizing-the-webinar.png" class="img-fluid mt-4">
+                          <figcaption style="text-align:center;"> Poster for publicizing the webinar </figcaption>
+                          </figure>
+                        </div>
+                      </div>
+        </div>
+
       </div>
     </div>
   </div>
@@ -655,6 +673,28 @@ Overall, the tasks were designed in a way that idea creativity was encouraged, y
     <div id="collapseEighteen" class="accordion-collapse collapse show" aria-labelledby="headingEighteen">
       <div class="accordion-body">
         <p>Our Team Leader, Aditi Balasubramani, visited a meeting hosted by the Rotary Club of Coimbatore Metropolis. There, she gave a gist of the project and a basic overview of synthetic biology in a way that was easy to understand for everyone present there. There were around 20 members in the audience; they were Rotary members who were business people, mainly aged 40-60. They were very interested in the synthetic biology aspect of bioremediation. However, there were mixed opinions on the idea of genetically modified organisms and concerns about the accidental release of our modified organisms. They were satisfied with the explanation of a kill switch and biocontainment strategies. Some felt that GMOs were the future, while others were staunchly against it but were willing to listen and understand more. This visit exposed the public’s opinions towards GMOs and bioremediation.</p>
+        
+        <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="https://static.igem.wiki/teams/4641/wiki/education/working-professionals.png" class="d-block w-100" >
+    </div>
+    <div class="carousel-item">
+      <img src="https://static.igem.wiki/teams/4641/wiki/education/worksing-professionals-2.png" class="d-block w-100">
+    </div>
+    <div class="carousel-item">
+      <img src="https://static.igem.wiki/teams/4641/wiki/education/working-professionals-3.png" class="d-block w-100">
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
       </div>
     </div>
   </div>
@@ -667,6 +707,57 @@ Overall, the tasks were designed in a way that idea creativity was encouraged, y
     <div id="collapseTwenty" class="accordion-collapse collapse" aria-labelledby="headingTwenty" >
       <div class="accordion-body">
         <p>In an attempt to gauge the understanding of working professionals about synthetic biology, GMOs, and bioremediation, a few of our team members interviewed their family members. They asked them basic questions about the same. We recorded their responses and conducted an online education session based on the topics that needed more clarity and awareness.</p>
+
+      <div class="ratio ratio-16x9">
+          <iframe src="https://static.igem.wiki/teams/4641/wiki/education/working-professionals-ppt.pdf" allowfullscreen></iframe>
+      </div>
+
+      <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img class="d-block w-100" src="https://static.igem.wiki/teams/4641/wiki/education/working-profesional-interview.png">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="https://static.igem.wiki/teams/4641/wiki/education/working-professional-interview-2.png" >
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="https://static.igem.wiki/teams/4641/wiki/education/working-professional-interview-3.png" >
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="https://static.igem.wiki/teams/4641/wiki/education/working-professional-interview-4.png">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="https://static.igem.wiki/teams/4641/wiki/education/working-professional-interview-5.png" >
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="https://static.igem.wiki/teams/4641/wiki/education/working-professional-interview-6.png" >
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="https://static.igem.wiki/teams/4641/wiki/education/working-professional-interview-7.png">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="https://static.igem.wiki/teams/4641/wiki/education/working-professional-interview-8.png"">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="https://static.igem.wiki/teams/4641/wiki/education/working-professional-interview-9.png" >
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="https://static.igem.wiki/teams/4641/wiki/education/working-professionals-interview-10.png">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="https://static.igem.wiki/teams/4641/wiki/education/working-professionals-interview-11.png">
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+
       </div>
     </div>
   </div>
@@ -687,18 +778,27 @@ Overall, the tasks were designed in a way that idea creativity was encouraged, y
 
 Both the teams have collated a report on this event:<br></p>
 
+      <div class="ratio ratio-16x9">
+          <iframe src="https://static.igem.wiki/teams/4641/wiki/education/bioremediation-conclave.pdf" allowfullscreen></iframe>
+      </div>
+
       </div>
     </div>
   </div>
   <div class="accordion-item">
     <h2 class="accordion-header" id="headingTwentyTwo">
       <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwentyTwo" aria-expanded="false" aria-controls="collapseTwentyTwo">
-        <b>Newspaper article in Hindi</b>
+        <b>We Made it to the News!</b>
       </button>
     </h2>
     <div id="collapseTwentyTwo" class="accordion-collapse collapse" aria-labelledby="headingTwentyTwo">
       <div class="accordion-body">
         <p>In order to target a broader range of society and make our project accessible to all, we published an article in a local Hindi newspaper called “Naidunia” (meaning New World), popular in Central India. The article comprised the basics of synthetic biology, followed by an introduction about iGEM as a competition. It also briefly explained our project, “CarbanEl,” while explaining the harmful impacts of triclocarban (TCC) on the environment.<p>
+
+      <div class="ratio ratio-16x9">
+          <iframe src="https://static.igem.wiki/teams/4641/wiki/education/newspaper-article.pdf" allowfullscreen></iframe>
+      </div>
+          
       </div>
     </div>
   </div>
