--- a/wiki/pages/education.html
+++ b/wiki/pages/education.html
@@ -842,6 +842,23 @@ Shreya discussed how we can drive change through informed decisions, sharing a c
 
 We thank Green Yatra for granting us this valuable platform to voice our concerns and promote sustainability. This session gave us a chance to reach the general population and raise awareness about the presence of harmful chemicals in our PCPs.<br>
 </p>
+
+<div class="container">
+                      <div class="row">
+                        <div class="col-md-6">
+                          <img src="https://static.igem.wiki/teams/4641/wiki/education/green-yatra-1.png" class="img-fluid mt-4" >
+                        </div>
+                        <div class="col-md-6">
+                          <img src="https://static.igem.wiki/teams/4641/wiki/education/green-yatra-2.png" class="img-fluid mt-4" >
+                        </div>
+                      </div>
+        </div>
+
+        <div class="mt-5 ratio ratio-16x9">
+          <iframe src="https://static.igem.wiki/teams/4641/wiki/education/newspaper-article.pdf" allowfullscreen></iframe>
+      </div>
+
+
       </div>
     </div>
   </div>
@@ -878,6 +895,28 @@ Synthetic biology is transforming waste management by using bacteria to convert 
 Biochar, derived from biomass, is a carbon-rich substance with applications in carbon removal, soil purification, water treatment, and more. Despite challenges like stability and heavy metal content, it can capture significant CO2 and reduce greenhouse gasses. Nevertheless, biochar has immense potential in addressing climate change, improving agriculture, and waste management with a growing global market. Overcoming technical and regulatory hurdles is critical to its success.<br>
 </p>
 
+<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img class="d-block w-100" src="https://static.igem.wiki/teams/4641/wiki/education/syn-bio-series-1.png" alt="First slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="https://static.igem.wiki/teams/4641/wiki/education/syn-bio-series-2.png" alt="Second slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="https://static.igem.wiki/teams/4641/wiki/education/syn-bio-series-3.png" alt="Third slide">
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+
 
       </div>
     </div>
@@ -895,6 +934,17 @@ Biochar, derived from biomass, is a carbon-rich substance with applications in c
 To make it sound more creative and professional, we collaborated with Paras Ahuja, one of the most creative musicians and music producers in Manipal. He composed and produced the whole music track using the piano sample as the primary element and added his own unique, creative, and experimental musical additions. Further, it paved a path for us to educate visually impaired people.
 </p>
 
+<div class="container">
+                      <div class="row">
+                        <div class="col-md-6">
+                          <img src="https://static.igem.wiki/teams/4641/wiki/education/music-compostion.png" class="img-fluid mt-4" >
+                        </div>
+                        <div class="col-md-6">
+                          <img src="https://static.igem.wiki/teams/4641/wiki/education/music-compostion-2.png" class="img-fluid mt-4" >
+                        </div>
+                      </div>
+        </div>
+
       </div>
     </div>
   </div>
@@ -902,13 +952,51 @@ To make it sound more creative and professional, we collaborated with Paras Ahuj
   <div class="accordion-item">
     <h2 class="accordion-header" id="headingTwentyEight">
       <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwentyEight" aria-expanded="false" aria-controls="collapseTwentyEight">
-        <b>Handbook</b>
+        <b>"Unlocking Clarity: A Comprehensive Guide to Water Pollution, Micropollutants, and Sustainable Solutions"</b>
       </button>
     </h2>
     <div id="collapseTwentyEight" class="accordion-collapse collapse" aria-labelledby="headingTwentyEight" >
       <div class="accordion-body">
         <p>From our survey we inferred that the general public, particularly working class individuals are not as concerned as expected about micropollutants, thus through our handbook we aim to educate those interested on Water Pollution, Understanding Micropollutants, Water Treatment Methods, Prevention and Source Control and Wastewater Management.
       </p>
+      </div>
+    </div>
+  </div>
+
+  <div class="accordion-item">
+    <h2 class="accordion-header" id="headingTwentyNine">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwentyNine" aria-expanded="false" aria-controls="collapseTwentyNine">
+        <b>BioArt Competition</b>
+      </button>
+    </h2>
+    <div id="collapseTwentyNine" class="accordion-collapse collapse" aria-labelledby="headingTwentyNine" >
+      <div class="accordion-body">
+        <p>MIT-MAHE hosted a “BioArt Competition”, in collaboration with IIT-Delhi, based on the applications of synthetic biology and solving environmental problems using traditional, indigenous and folk art styles. The participants showcased their creativity while also describing the thoughts behind their design. We encouraged them by providing Certificates of Appreciation to all the participating candidates. We also shared their artworks on our Instagram handle to spread knowledge about various concepts in ways  other than texts. Through these images we plan to appeal to the creative mind of individuals and leave an impact which cannot be achieved through texts.
+      </p>
+
+      <div class="ratio ratio-16x9">
+          <iframe src="https://static.igem.wiki/teams/4641/wiki/education/bioart.pdf" allowfullscreen></iframe>
+      </div>
+
+      </div>
+    </div>
+  </div>
+
+  <div class="accordion-item">
+    <h2 class="accordion-header" id="heading">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThirtyOne" aria-expanded="false" aria-controls="collapseThirtyOne">
+        <b>Incorporating the insights from our public survey on our social media</b>
+      </button>
+    </h2>
+    <div id="collapseThirtyOne" class="accordion-collapse collapse" aria-labelledby="headingThirtyOne" >
+      <div class="accordion-body">
+        <p>We used our instagram platform to spread awareness on organizations working towards the development of safer products. From our survey we were able to identify that many people were not aware of any such organizations that promote safer products and would be interested in learning more about the same. These are not the only organizations working for the aforementioned cause, we hope to find more such organizations and help them spread their word through our social media platforms in the near future.
+      </p>
+    <figure>
+      <img class="mt-5 img-fluid" src="https://static.igem.wiki/teams/4641/wiki/education/social-media-publicity-organizations-working-towards-safer-products.jpg">
+      <figcaption style="text-align:center;"> Social Media publicity organizations working  towards safer products </figcaption>
+    </figure>
+
       </div>
     </div>
   </div>
@@ -925,6 +1013,11 @@ On 7 October 2023, our team visited the Asare Rehabilitation Centre—a home for
   <p class='mt-5 sub-stuff'> For future teams to build upon and our biggest take away from our educational visits, this is our “Guide to Education” for various age groups. <br><br>
 This is one of the major challenges faced by our team during our education sessions. The differences in age groups, regions and languages was something that one needs to keep in mind while planning a session.<br><br> 
 From our educational visits across various states of India, we have realized a few things that need to be pondered over before an educational visit. We have attempted to compile thought-provoking and follow-up questions on how to effectively convey our ideas to the different sections of the community  and educate them about synthetic biology and more. </p>
+
+<div class="ratio ratio-16x9">
+          <iframe src="https://static.igem.wiki/teams/4641/wiki/education/igem-guidetoeducation.pdf" allowfullscreen></iframe>
+      </div>
+
                   </div>
 
                 <div class='m-5' style="height: 50px">
